{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 1005,
  "lineage": "5caa320e-89a4-4a96-d5d8-2facb55891c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_vpc_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:security-group/sg-06b98cabb60fc7996",
            "description": "Allow all traffic within the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "10.59.0.0/16"
                ],
                "description": "Allow all outbound traffic within the VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b98cabb60fc7996",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.59.0.0/16"
                ],
                "description": "Allow all inbound traffic within the VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-vpc-internal",
            "name_prefix": "",
            "owner_id": "069057294951",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f40f65cc5c02274c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:security-group/sg-07c4e33080183d635",
            "description": "Allow NodePort traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c4e33080183d635",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              }
            ],
            "name": "KubernetesNodePortSG",
            "name_prefix": "",
            "owner_id": "069057294951",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f40f65cc5c02274c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:security-group/sg-0e82bb023970d1f5c",
            "description": "Security group for all nodes in the cluster",
            "egress": [],
            "id": "sg-0e82bb023970d1f5c",
            "ingress": [],
            "name": "node-security-group",
            "name_prefix": "",
            "owner_id": "069057294951",
            "revoke_rules_on_delete": false,
            "tags": {
              "karpenter.sh/discovery": "car-dev-eksdemo",
              "kubernetes.io/cluster/car-dev-eksdemo": "owned"
            },
            "tags_all": {
              "karpenter.sh/discovery": "car-dev-eksdemo",
              "kubernetes.io/cluster/car-dev-eksdemo": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f40f65cc5c02274c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.eks_master_role",
            "aws_iam_role_policy_attachment.eks-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.eks-AmazonEKSVPCResourceController",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_control_plane_sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2211502803",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e49fab9a04bdea38",
            "security_group_rule_id": "sgr-0aa83e47f8c095346",
            "self": false,
            "source_security_group_id": "sg-0e82bb023970d1f5c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.eks_master_role",
            "aws_iam_role_policy_attachment.eks-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.eks-AmazonEKSVPCResourceController",
            "aws_security_group.node_security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_egress_to_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow the cluster control plane to communicate with worker Kubelet and pods",
            "from_port": 1025,
            "id": "sgrule-2298482587",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e49fab9a04bdea38",
            "security_group_rule_id": "sgr-00ac0af85935981ad",
            "self": false,
            "source_security_group_id": "sg-0e82bb023970d1f5c",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.eks_master_role",
            "aws_iam_role_policy_attachment.eks-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.eks-AmazonEKSVPCResourceController",
            "aws_security_group.node_security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_egress_to_node_sg_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow the cluster control plane to communicate with pods running extension API servers on port 443",
            "from_port": 443,
            "id": "sgrule-2863168242",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e49fab9a04bdea38",
            "security_group_rule_id": "sgr-07a8a3700133ac356",
            "self": false,
            "source_security_group_id": "sg-0e82bb023970d1f5c",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.eks_master_role",
            "aws_iam_role_policy_attachment.eks-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.eks-AmazonEKSVPCResourceController",
            "aws_security_group.node_security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes to communicate with the internet",
            "from_port": 0,
            "id": "sgrule-1098965425",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e82bb023970d1f5c",
            "security_group_rule_id": "sgr-03b5b3054fc99597a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.eks_master_role",
            "aws_iam_role_policy_attachment.eks-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.eks-AmazonEKSVPCResourceController",
            "aws_security_group.node_security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_security_group_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3431754130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e82bb023970d1f5c",
            "security_group_rule_id": "sgr-08c152467f659545b",
            "self": false,
            "source_security_group_id": "sg-0e82bb023970d1f5c",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.eks_master_role",
            "aws_iam_role_policy_attachment.eks-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.eks-AmazonEKSVPCResourceController",
            "aws_security_group.node_security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_sg_from_control_plane_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-654713513",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e82bb023970d1f5c",
            "security_group_rule_id": "sgr-0ec212a020400829f",
            "self": false,
            "source_security_group_id": "sg-0e49fab9a04bdea38",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.eks_master_role",
            "aws_iam_role_policy_attachment.eks-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.eks-AmazonEKSVPCResourceController",
            "aws_security_group.node_security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_sg_from_control_plane_on_443_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane",
            "from_port": 443,
            "id": "sgrule-2109038875",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e82bb023970d1f5c",
            "security_group_rule_id": "sgr-0133776a7cc3e47ca",
            "self": false,
            "source_security_group_id": "sg-0e49fab9a04bdea38",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.eks_master_role",
            "aws_iam_role_policy_attachment.eks-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.eks-AmazonEKSVPCResourceController",
            "aws_security_group.node_security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:network-acl/acl-01ccd09c9d28f7731",
            "default_network_acl_id": "acl-01ccd09c9d28f7731",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01ccd09c9d28f7731",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "069057294951",
            "subnet_ids": [
              "subnet-0893126e90972b3a4",
              "subnet-09743e9600ff1bf39"
            ],
            "tags": {
              "Name": "car-dev-us-east-1-default",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-us-east-1-default",
              "environment": "dev",
              "owners": "car"
            },
            "vpc_id": "vpc-0f40f65cc5c02274c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:route-table/rtb-05d0c5036c6fd8a26",
            "default_route_table_id": "rtb-05d0c5036c6fd8a26",
            "id": "rtb-05d0c5036c6fd8a26",
            "owner_id": "069057294951",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "car-dev-us-east-1-default",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-us-east-1-default",
              "environment": "dev",
              "owners": "car"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f40f65cc5c02274c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:security-group/sg-043af7b8206b068dd",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-043af7b8206b068dd",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "069057294951",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "car-dev-us-east-1-default",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-us-east-1-default",
              "environment": "dev",
              "owners": "car"
            },
            "vpc_id": "vpc-0f40f65cc5c02274c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:internet-gateway/igw-0d322447f7bff29ae",
            "id": "igw-0d322447f7bff29ae",
            "owner_id": "069057294951",
            "tags": {
              "Name": "car-dev-us-east-1",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-us-east-1",
              "environment": "dev",
              "owners": "car"
            },
            "vpc_id": "vpc-0f40f65cc5c02274c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d322447f7bff29ae",
            "id": "r-rtb-00d75ee7e9a61f3671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00d75ee7e9a61f367",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:route-table/rtb-00d75ee7e9a61f367",
            "id": "rtb-00d75ee7e9a61f367",
            "owner_id": "069057294951",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "car-dev-us-east-1-public",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-us-east-1-public",
              "environment": "dev",
              "owners": "car"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f40f65cc5c02274c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0a637d0126d9298",
            "route_table_id": "rtb-00d75ee7e9a61f367",
            "subnet_id": "subnet-0893126e90972b3a4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0061d7e2ddf62241b",
            "route_table_id": "rtb-00d75ee7e9a61f367",
            "subnet_id": "subnet-09743e9600ff1bf39"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:subnet/subnet-0893126e90972b3a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.59.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0893126e90972b3a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "069057294951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "car-dev-us-east-1-public-us-east-1a",
              "environment": "dev",
              "karpenter.sh/discovery": "car-dev-eksdemo",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-us-east-1-public-us-east-1a",
              "environment": "dev",
              "karpenter.sh/discovery": "car-dev-eksdemo",
              "owners": "car"
            },
            "vpc_id": "vpc-0f40f65cc5c02274c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:subnet/subnet-09743e9600ff1bf39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.59.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09743e9600ff1bf39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "069057294951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "car-dev-us-east-1-public-us-east-1b",
              "environment": "dev",
              "karpenter.sh/discovery": "car-dev-eksdemo",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-us-east-1-public-us-east-1b",
              "environment": "dev",
              "karpenter.sh/discovery": "car-dev-eksdemo",
              "owners": "car"
            },
            "vpc_id": "vpc-0f40f65cc5c02274c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:vpc/vpc-0f40f65cc5c02274c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.59.0.0/16",
            "default_network_acl_id": "acl-01ccd09c9d28f7731",
            "default_route_table_id": "rtb-05d0c5036c6fd8a26",
            "default_security_group_id": "sg-043af7b8206b068dd",
            "dhcp_options_id": "dopt-cd3276b6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f40f65cc5c02274c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05d0c5036c6fd8a26",
            "owner_id": "069057294951",
            "tags": {
              "Name": "car-dev-us-east-1",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-us-east-1",
              "environment": "dev",
              "owners": "car"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}